Fix contrast on for colors
https://zoonou.mydonedone.com/issuetracker/projects/90739/issues/6

--- a/app/assets/stylesheets/base/_application-card.scss
+++ b/app/assets/stylesheets/base/_application-card.scss
@@ -94,6 +94,6 @@
   &__undergraduate {
     padding: govuk-spacing(2);
 
-    background-color: #fff6bf;
+    background-color: #fff8c9;
   }
 }
